<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WordzApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings_main">Developed By</string>
    <string name="title_activity_wordz_basic">WordzBasic</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_wordz_schedule">WordzSchedule</string>
    <string name="title_activity_wordz_support">WordzSupport</string>
    <string name="Example">	Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_model__un__pro">MODEL_UN_PRO</string>

    <!-- MODEL UN ACTIVITY -->
    <string name="model_formal_debate_head">Formal Debate</string>
    <string name="model_formal_debate_maini">The opportunity for delegates to share their views with the entire committee.</string>
    <string name="POI_head">Point of Information</string>
    <string name="POI_main">After a delegate has given a speech in formal debate, he or she may choose to yield his or her time to this point.</string>
    <string name="MOCOD_head">Motion for Closure of Debate</string>
    <string name="MOCOD_main">Motion for the committee to move into voting procedure</string>
    <string name="MOSD_head">Motion to Suspend Debate</string>
    <string name="MOSD_main">Motion to suspend the meeting for the purposes of a regular caucus or a moderated caucus.</string>
    <string name="POIN_head">Point of Inquiry</string>
    <string name="POIN_main">A delegate may move for this point to ask the chairperson a question regarding the rules of procedure.</string>
    <string name="MTSST_head">Motion to Set Speakers Time</string>
    <string name="MTSST_main">Motion to change the length of time during formal debate.</string>
    <string name="MTAM_head">Motion to the Adjourn Meeting</string>
    <string name="MTAM_main">Motion to end the committee session until the next session.</string>
    <string name="MTTD_head">Motion to Table Debate</string>
    <string name="MTTD_main">Motion to put current discussion or work on a topic on hold.</string>
    <string name="MTMCA_head">Motion to move to a Moderated Caucus</string>
    <string name="MTMCA_main">A mixture of both formal and informal debate.</string>
    <string name="POO_head">Point of Order</string>
    <string name="POO_main">During any discussion, a representative may rise to this point. The chairperson must immediately decide on this point.</string>
    <string name="title_activity_munvocab">MUNVocab</string>
    <string name="title_activity_points_and_motion_list">PointsAndMotionList</string>
    <string name="title_activity_resolutions">Resolutions</string>
    <string name="title_activity_sample_resolution">SampleResolution</string>
    <string name="title_activity_points_and_motion_usage">PointsAndMotionUsage</string>
    <string name="aboutWordz"><b>WORDZ</b> is a student led youth organization which aims at enhancing public speaking as well as leadership skills among the youth of our country.\n\n\n
We at WORDZ believe that each student has the potential to be a good speaker, debater, orator and diplomat. For this reason we provide schools with workshops and trainings for different platforms of public speaking so as to facilitate programs for them to follow and learn what they need to. We send our trainers to various schools and universities helping the students learn better and faster through modules and simulations.\n\n\n
Alongwith this, WORDZ also organises various events ranging from intra/inter school/college MUNs to Parliamentary Debates, Quizzes and other events relating to public speaking .</string>
    <string name="title_activity_muncalender">MUNCalender</string>
    <string name="title_activity_munlist">MUNList</string>


    <string name="SummitManipal"><a href="http://summitmanipal.com/">Summit Manipal Model United Nations (SMMUN)</a></string>
    <string name="NSIT_MUN"><a href="https://www.facebook.com/nsitmun">Netaji Subhas Institute Of Technology Model United Nations (NSITMUN)</a></string>

    <string name="about_body"><![CDATA[
        This app is developed by <br/><b>Yogesh Balan</b>.<br/>
        <a href=\'https://www.facebook.com/yogesh.balan.7\'>Facebook</a>&nbsp;&nbsp;
        <a href=\'https://twitter.com/yogesh_balan\'>Twitter</a>&nbsp;&nbsp;
        <a href=\'https://plus.google.com/u/0/112844341182757087976\'>Google+</a>&nbsp;&nbsp;
        <a href=\'https://github.com/yogeshbalan\'>GitHub</a>&nbsp;&nbsp;
        <a href=\'mailto:wordz.delhi@gmail.com\'>Email</a>&nbsp;&nbsp;
    ]]></string>

    <string name="contacts"><u>Contacts</u>.</string>
    
</resources>
