<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yogesh.wordzapp.MODEL_UN_PRO">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/pro_one"
        app:theme="@style/myCustomTheme">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text=""
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/f1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:layout_margin="0dp"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="vertical"
                android:padding="20dp">

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/model_formal_debate_head"
                    android:textColor="@color/greytexthead"
                    android:textSize="25sp"
                    app:typeface="fonts/Gotham-BookItalic.ttf" />

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/model_formal_debate_maini"
                    android:textColor="@color/greytextdetail"
                    android:textSize="20sp"
                    app:typeface="fonts/Gotham-Book.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/f2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/f1"
                android:layout_margin="0dp"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="vertical"
                android:padding="20dp">

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/POI_head"
                    android:textColor="@color/greytexthead"
                    android:textSize="25sp"
                    app:typeface="fonts/Gotham-BookItalic.ttf" />

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/POI_main"
                    android:textColor="@color/greytextdetail"
                    android:textSize="20sp"
                    app:typeface="fonts/Gotham-Book.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/f3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/f2"
                android:layout_margin="0dp"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="vertical"
                android:padding="20dp">

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/MOCOD_head"
                    android:textColor="@color/greytexthead"
                    android:textSize="25sp"
                    app:typeface="fonts/Gotham-BookItalic.ttf" />

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/MOCOD_main"
                    android:textColor="@color/greytextdetail"
                    android:textSize="20sp"
                    app:typeface="fonts/Gotham-Book.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/f4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/f3"
                android:layout_margin="0dp"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="vertical"
                android:padding="20dp">

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/MOSD_head"
                    android:textColor="@color/greytexthead"
                    android:textSize="25sp"
                    app:typeface="fonts/Gotham-BookItalic.ttf" />

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/MOSD_main"
                    android:textColor="@color/greytextdetail"
                    android:textSize="20sp"
                    app:typeface="fonts/Gotham-Book.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/f5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/f4"
                android:layout_margin="0dp"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="vertical"
                android:padding="20dp">

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/POIN_head"
                    android:textColor="@color/greytexthead"
                    android:textSize="25sp"
                    app:typeface="fonts/Gotham-BookItalic.ttf" />

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/POIN_main"
                    android:textColor="@color/greytextdetail"
                    android:textSize="20sp"
                    app:typeface="fonts/Gotham-Book.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/f6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/f5"
                android:layout_margin="0dp"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="vertical"
                android:padding="20dp">

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/MTSST_head"
                    android:textColor="@color/greytexthead"
                    android:textSize="25sp"
                    app:typeface="fonts/Gotham-BookItalic.ttf" />

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/MTSST_main"
                    android:textColor="@color/greytextdetail"
                    android:textSize="20sp"
                    app:typeface="fonts/Gotham-Book.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/f7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/f6"
                android:layout_margin="0dp"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="vertical"
                android:padding="20dp">

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/MTAM_head"
                    android:textColor="@color/greytexthead"
                    android:textSize="25sp"
                    app:typeface="fonts/Gotham-BookItalic.ttf" />

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/MTAM_main"
                    android:textColor="@color/greytextdetail"
                    android:textSize="20sp"
                    app:typeface="fonts/Gotham-Book.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/f8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/f7"
                android:layout_margin="0dp"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="vertical"
                android:padding="20dp">

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/MTTD_head"
                    android:textColor="@color/greytexthead"
                    android:textSize="25sp"
                    app:typeface="fonts/Gotham-BookItalic.ttf" />

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/MTTD_main"
                    android:textColor="@color/greytextdetail"
                    android:textSize="20sp"
                    app:typeface="fonts/Gotham-Book.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/f9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/f8"
                android:layout_margin="0dp"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="vertical"
                android:padding="20dp">

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/MTMCA_head"
                    android:textColor="@color/greytexthead"
                    android:textSize="25sp"
                    app:typeface="fonts/Gotham-BookItalic.ttf" />

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/MTMCA_main"
                    android:textColor="@color/greytextdetail"
                    android:textSize="20sp"
                    app:typeface="fonts/Gotham-Book.ttf" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/f10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/f9"
                android:layout_margin="0dp"
                android:background="@drawable/abc_popup_background_mtrl_mult"
                android:orientation="vertical"
                android:padding="20dp">

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/POO_head"
                    android:textColor="@color/greytexthead"
                    android:textSize="25sp"
                    app:typeface="fonts/Gotham-BookItalic.ttf" />

                <com.yogesh.wordzapp.utils.TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/POO_main"
                    android:textColor="@color/greytextdetail"
                    android:textSize="20sp"
                    app:typeface="fonts/Gotham-Book.ttf" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
